--- a/app/src/main/assets/www/package.json
+++ b/app/src/main/assets/www/package.json
@@ -7,6 +7,8 @@
   "author": "Michael Triantafelow <MTriantafelow@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "bootstrap": "4.0.0-beta"
+    "bootstrap": "4.0.0-beta",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   }
 }
