--- a/app/src/main/assets/www/package.json
+++ b/app/src/main/assets/www/package.json
@@ -8,7 +8,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bootstrap": "4.0.0-beta",
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.5"
+    "jquery": "3.2.1",
+    "popper.js": "1.11.0"
   }
 }
