--- a/app/src/main/assets/www/package.json
+++ b/app/src/main/assets/www/package.json
@@ -7,7 +7,6 @@
   "author": "Michael Triantafelow <MTriantafelow@gmail.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "material-components-web": "^0.21.1",
-    "material-design-icons": "^3.0.1"
+    "material-components-web": "^0.21.1"
   }
 }
